--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -40,7 +40,8 @@
   padding: 10px;
   border-radius: 5px;
   background-color: #38a3a5;
-  margin: 0.3em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
 }
 
 .links:hover {
